[package]
name = "tempest-exporter"
description = "Exporter for WeatherFlow Tempest local UDP API"
version = "0.1.0"
authors = ["Kyle Schaffrick <kyle@raidi.us>"]
edition = "2021"
keywords = ["weather", "weatherflow", "tempest", "mqtt", "prometheus"]
license = "MIT OR Apache-2.0"
exclude = [
	".gitignore",
]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
futures-core = "0.3"
http = "0.2"
log = { version = "0.4", features = [ "serde" ] }
prometheus = "0.13"
rumqttc = "0.10"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
simple_logger = "1.16"
structopt = "0.3"
tokio-stream = "0.1"
warp = "0.3"

[dependencies.tokio]
version = "1.15"
features = [
	"macros",
	"net",
	"rt-multi-thread",
	"signal",
]
